@@ -1,3 +1,8 @@
+Tue Dec 16 11:22:13 1997  Ezra Peisach  <epeisach@mit.edu>
+
+	* svc_auth_gssapi.c (_svcauth_gssapi): When looping over services,
+		free previous output_tokens.
+
 Fri Nov 21 00:37:14 1997  Ezra Peisach  <epeisach@mit.edu>
 
 	* Makefile.in (types.h): Add rules to generate file by running
